--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>🔥Irwin🔥</title>
   <link rel="stylesheet" href="">
 </head>
 <body>
+  <div class="team-container">
 
+    <div class="nicos-bio-cotainer">
+      <h2>Nico Cucciniello</h2>
+      <h3>Things I like</h3>
+      <ul>
+        <li>Turtles</li>
+        <li>🔥🔥Being lit af🔥🔥</li>
+        <li>Dank memes</li>
+      </ul>
+    </div>
+
+  </div>
 </body>
 </html>
